crates/ir/tests/snapshots/lower_test__modules__use_user_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__use_user_trait

type Greeting = MkGreeting#0(String)
instance Printable[Greeting] { display=f1 }
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonMap" staticEmpty(): Object
extern java "krypton.runtime.KryptonMap" staticPut(Object, Object, Object, Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticGetUnsafe(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticContainsKey(Object, Object): Bool
extern java "krypton.runtime.KryptonMap" staticDelete(Object, Object): Object
extern java "krypton.runtime.KryptonMap" staticKeys(Object): Object
extern java "krypton.runtime.KryptonMap" staticValues(Object): Object
extern java "krypton.runtime.KryptonMap" staticEntries(Object): Object
extern java "krypton.runtime.KryptonMap" staticSize(Object): Int
extern java "krypton.runtime.KryptonMap" staticMerge(Object, Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonArray" staticLength(Object): Int
extern java "krypton.runtime.KryptonArray" staticGet(Object, Int): Object
extern java "krypton.runtime.KryptonArray" staticNew(Int): Object
extern java "krypton.runtime.KryptonArray" staticSet(Object, Int, Object): Unit
extern java "krypton.runtime.KryptonArray" staticFreeze(Object): Object
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern java "krypton.runtime.KryptonIO" raw_println(Object): Unit
extern java "krypton.runtime.KryptonIO" raw_print(Object): Unit
extern java "krypton.runtime.KryptonIO" readLine(): String
extern java "krypton.runtime.KryptonIO" read_file(String): Result[String, String]
extern java "krypton.runtime.KryptonIO" write_file(String, String): Result[String, Unit]
extern type java "krypton.runtime.KryptonArray" Vec
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonArray" Vec
extern type java "krypton.runtime.KryptonArray" Vec
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonMap" Map
extern type java "krypton.runtime.KryptonArray" Vec
import core/eq/eq as eq(g, g): Bool
import core/ord/lt as lt(h, h): Bool
import core/semigroup/combine as combine(g, g): g
import core/sub/sub as sub(g, g): g
import core/mul/mul as mul(g, g): g
import core/div/div as div(g, g): g
import core/neg/neg as neg(g): g
import core/show/show as show(g): String
import core/hash/hash as hash(g): Int
import core/resource/close as close(~g): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[t3]): Option[t3]
import core/list/sort_by as sort_by(List[y5], (y5) -> n5): List[y5]
import core/list/filter as filter(List[i1], (i1) -> Bool): List[i1]
import core/list/fold as fold(List[v1], x1, (x1, v1) -> x1): x1
import core/list/map as map(List[x], (x) -> z): List[z]
import core/vec/to_list as to_list(Vec[j7]): List[j7]
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/io/println as println(m): Unit
import user_trait_lib/display as display(u7): String
declare display: (u7) -> String
declare println: (m) -> Unit

fn main() -> Unit =
  let v1: ~Greeting = construct Greeting::MkGreeting#0("hi")
  let v2: Dict[Printable, Greeting] = get_dict Printable[Greeting]
  let v3: String = call display(v2, v1)
  let v0: Dict[Show, String] = get_dict Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Printable$$Greeting$$display(v5: Greeting) -> ~String =
  "hello"
